force-app/main/default/objects/SCC_Nota_Manual__c/SCC_Nota_Manual__c.object-meta.xml
<CustomObject>
    <label>Nota Analisa</label>
    <nameField>
        <displayFormat>NOTA-{0000000000}</displayFormat>
        <label>Nota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nota Analisa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>