force-app/main/default/objects/SCC_Nota_Manual__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Nota_Manual</relationshipName>
    <type>Lookup</type>
</CustomField>