force-app/main/default/objects/SCC_Nota_Manual__c/fields/Nota_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Nota_Created_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Nota Created Date</label>
    <type>Date</type>
</CustomField>