force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_Branchcode__c.field-meta.xml
<CustomField>
    <fullName>SCC_Branchcode__c</fullName>
    <label>Branchcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>