force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_Jenis_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>SCC_Jenis_Transaksi__c</fullName>
    <label>Jenis Transaksi</label>
    <length>200</length>
    <type>Text</type>
</CustomField>