force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_Jumlah_Debit__c.field-meta.xml
<CustomField>
    <fullName>SCC_Jumlah_Debit__c</fullName>
    <label>Jumlah</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>