force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_Keterangan__c.field-meta.xml
<CustomField>
    <fullName>SCC_Keterangan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Keterangan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>