force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_Nama_Nasabah__c.field-meta.xml
<CustomField>
    <fullName>SCC_Nama_Nasabah__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nama Nasabah</label>
    <length>100</length>
    <type>Text</type>
</CustomField>