force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_No_Kartu__c.field-meta.xml
<CustomField>
    <fullName>SCC_No_Kartu__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No. Kartu</label>
    <length>30</length>
    <type>Text</type>
</CustomField>