force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_No_Rekening__c.field-meta.xml
<CustomField>
    <fullName>SCC_No_Rekening__c</fullName>
    <label>No. Rekening</label>
    <length>30</length>
    <type>Text</type>
</CustomField>