force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_No_Telepon__c.field-meta.xml
<CustomField>
    <fullName>SCC_No_Telepon__c</fullName>
    <label>No. Telpon</label>
    <length>15</length>
    <type>Text</type>
</CustomField>