force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_Rekening_Fee__c.field-meta.xml
<CustomField>
    <fullName>SCC_Rekening_Fee__c</fullName>
    <label>Rekening Fee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>