force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_Terminal_ID__c.field-meta.xml
<CustomField>
    <fullName>SCC_Terminal_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SCC Terminal ID</label>
    <referenceTo>SCC_Terminal_ID__c</referenceTo>
    <relationshipName>Nota_Manual</relationshipName>
    <type>Lookup</type>
</CustomField>