force-app/main/default/objects/SCC_Nota_Manual__c/fields/SCC_Total__c.field-meta.xml
<CustomField>
    <fullName>SCC_Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>