force-app/main/default/objects/SCC_Nota_Manual__c/validationRules/BRIZZI.validationRule-meta.xml
<ValidationRule>
    <fullName>BRIZZI</fullName>
    <active>true</active>
    <errorConditionFormula>Case__r.SCC_Call_Type__r.External_Id__c = &apos;8713&apos; &amp;&amp;  ( SCC_Total__c &gt; 10000000 ||  SCC_Jumlah_Debit__c &gt; 10000000 ||  SCC_Jumlah_Kredit__c &gt; 10000000 )</errorConditionFormula>
    <errorMessage>Nominal tidak boleh lebih dari 10.000.000</errorMessage>
</ValidationRule>