force-app/main/default/objects/SCC_Nota_Manual__c/validationRules/SCC_Nota_Analisa.validationRule-meta.xml
<ValidationRule>
    <fullName>SCC_Nota_Analisa</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp; Case__r.SCC_Count_Queuetrans__c &gt; 0</errorConditionFormula>
    <errorMessage>Tidak bisa buat nota analisa jika sudah memilih rekon Unmatch</errorMessage>
</ValidationRule>